# spgemm

./: .gitignore  CMakeLists.txt  Makefile  README.md  init-euler.sh  requirements.txt  shell.nix
daint/: init.sh  init_eiger.sh  prep_eiger.sh
euler/: get_euler_nodes.sh  init.sh
include/: bitmap.hpp  communication.hpp  generation.hpp  matrix.hpp  matrix_impl.hpp  measure.hpp  mults.hpp  partition.hpp  parts.hpp  utils.hpp
matrices/first/: A_shuffle  B.mtx  B_shuffle  C.mtx  C_sparsity.mtx
matrices/small2/: A.mtx
matrices/test/: A.mtx  A_3.mtx  B.mtx  C.mtx  C_0.mtx  C_1.mtx  C_2.mtx  C_expected.mtx  C_sparsity.mtx  partitions_order.csv  shuffle_A.txt  shuffle_B.txt
measurements/initial_shuffle/: Queen_4147.out  nlpkkt200.out  nlpkkt240.out
measurements/initial_shuffle/Queen_4147/: partitions.csv
measurements/initial_shuffle/nlpkkt200/: algo  measurements_0.csv  measurements_1.csv  measurements_10.csv  measurements_11.csv  measurements_12.csv  measurements_13.csv  measurements_14.csv  measurements_15.csv  measurements_2.csv  measurements_3.csv  measurements_4.csv  measurements_5.csv  measurements_6.csv  measurements_7.csv  measurements_8.csv  measurements_9.csv  partitions.csv
measurements/initial_shuffle/nlpkkt240/: A_shuffle  B_shuffle  matrix  measurements_0.csv  measurements_1.csv  measurements_10.csv  measurements_11.csv  measurements_12.csv  measurements_13.csv  measurements_14.csv  measurements_15.csv  measurements_2.csv  measurements_3.csv  measurements_4.csv  measurements_5.csv  measurements_6.csv  measurements_7.csv  measurements_8.csv  measurements_9.csv  partitions.csv
measurements/viscoplastic2/euler-5-40/2024-10-25-14:04:14-5/: measurements_0.csv  measurements_1.csv  measurements_2.csv  measurements_3.csv  measurements_4.csv
measurements/viscoplastic2/euler-5-40/2024-10-25-14:06:35-10/: measurements_0.csv  measurements_1.csv  measurements_2.csv  measurements_3.csv  measurements_4.csv  measurements_5.csv  measurements_6.csv  measurements_7.csv  measurements_8.csv  measurements_9.csv
measurements/viscoplastic2/euler-5-40/2024-10-25-14:08:24-15/: measurements_0.csv  measurements_1.csv  measurements_10.csv  measurements_11.csv  measurements_12.csv  measurements_13.csv  measurements_14.csv  measurements_2.csv  measurements_3.csv  measurements_4.csv  measurements_5.csv  measurements_6.csv  measurements_7.csv  measurements_8.csv  measurements_9.csv  partitions.csv
measurements/viscoplastic2/euler-5-40/2024-10-25-14:10:11-20/: measurements_0.csv  measurements_1.csv  measurements_10.csv  measurements_11.csv  measurements_12.csv  measurements_13.csv  measurements_14.csv  measurements_15.csv  measurements_16.csv  measurements_17.csv  measurements_18.csv  measurements_19.csv  measurements_2.csv  measurements_3.csv  measurements_4.csv  measurements_5.csv  measurements_6.csv  measurements_7.csv  measurements_8.csv  measurements_9.csv
measurements/viscoplastic2/euler-5-40/2024-10-25-14:11:27-25/: measurements_0.csv  measurements_1.csv  measurements_10.csv  measurements_11.csv  measurements_12.csv  measurements_13.csv  measurements_14.csv  measurements_15.csv  measurements_16.csv  measurements_17.csv  measurements_18.csv  measurements_19.csv  measurements_2.csv  measurements_20.csv  measurements_21.csv  measurements_22.csv  measurements_23.csv  measurements_24.csv  measurements_3.csv  measurements_4.csv  measurements_5.csv  measurements_6.csv  measurements_7.csv  measurements_8.csv  measurements_9.csv
measurements/viscoplastic2/euler-5-40/2024-10-25-14:12:42-30/: measurements_0.csv  measurements_1.csv  measurements_10.csv  partitions.csv  (+27 more)
plots/: comparison.ipynb  comparison_af10.ipynb  comparison_dfvr.ipynb  comparison_vs1m.ipynb  loader.py  scalability.ipynb  sections.ipynb  shuffling.ipynb
scripts/: banchmarks_energy.py  benchmark_time.py  compare_latest_run.py  compare_matrices.py  drop_average.py  eiger.py  fetch_matrices.py  gdb  generate_expected.py  install_deps_macos.sh  job_template.sh.j2  job_template2.sh.j2  merge_partitions.py  plot_variance.py  postprocessing.py  run  shuffling_plots.ipynb  shuffling_tests.ipynb  sweep_benchmark.py  unshuffle_C.py
scripts/plots/: final1.py
src/: bitmap.cpp  communication.cpp  main.cpp  matrix.cpp  measure.cpp  mm.cpp  partition.cpp  utils.cpp
src/mults/: baseline.cpp  baseline_advanced.cpp  combBLAS.cpp  combBLAS3D.cpp  drop.cpp  drop_at_once.cpp  drop_at_once_parallel.cpp  drop_parallel.cpp  full.cpp  outer.cpp  shared_methods.cpp
src/parts/: baseline.cpp  shuffle.cpp
(+3927 files in other folders)
